welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:6: error: type mismatch;
 found   : Unit
 required: Boolean
		if(vacation = false) {
                            ^sleepIn:10: error: type mismatch;
 found   : Unit
 required: Boolean
	if(weekday = false){
                   ^sleepIn:11: error: type mismatch;
 found   : Unit
 required: Boolean
		if(vacation) {
                ^sleepIn:10: error: type mismatch;
 found   : Unit
 required: Boolean
	if(weekday = false){
        ^